--- a/apkTools_release/index.html
+++ b/apkTools_release/index.html
@@ -64,6 +64,180 @@
       opacity: 0.5
     }
 
+    /* 主题切换按钮（卡片右上角） */
+    .theme-toggle-btn {
+      position: absolute;
+      top: var(--spacing-lg);
+      right: var(--spacing-lg);
+      width: 44px;
+      height: 44px;
+      background: rgba(255, 255, 255, 0.15);
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      border-radius: var(--radius-full);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--color-text-on-primary);
+      font-size: var(--font-size-large);
+      cursor: pointer;
+      transition: all 0.3s;
+      z-index: 10;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .theme-toggle-btn:hover {
+      background: rgba(255, 255, 255, 0.25);
+      border-color: rgba(255, 255, 255, 0.5);
+      transform: scale(1.1);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    /* 主题选择弹窗 */
+    .theme-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(5px);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    .theme-modal.show {
+      display: flex;
+      opacity: 1;
+    }
+
+    .theme-modal-content {
+      background: var(--color-surface);
+      border-radius: var(--radius-lg);
+      padding: var(--spacing-xl);
+      max-width: 500px;
+      width: 90%;
+      max-height: 80vh;
+      overflow-y: auto;
+      box-shadow: var(--shadow-xl);
+      transform: scale(0.9);
+      transition: transform 0.3s;
+      border: 1px solid var(--color-border);
+    }
+
+    .theme-modal.show .theme-modal-content {
+      transform: scale(1);
+    }
+
+    .theme-modal-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: var(--spacing-lg);
+      padding-bottom: var(--spacing-md);
+      border-bottom: 2px solid var(--color-border);
+    }
+
+    .theme-modal-title {
+      font-size: var(--font-size-large);
+      font-weight: var(--font-weight-bold);
+      color: var(--color-text);
+      margin: 0;
+    }
+
+    .theme-modal-close {
+      width: 32px;
+      height: 32px;
+      border: none;
+      background: transparent;
+      color: var(--color-text-secondary);
+      font-size: var(--font-size-large);
+      cursor: pointer;
+      border-radius: var(--radius-sm);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.2s;
+    }
+
+    .theme-modal-close:hover {
+      background: var(--color-hover);
+      color: var(--color-text);
+    }
+
+    .theme-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: var(--spacing-md);
+    }
+
+    .theme-item {
+      padding: var(--spacing-md);
+      border: 2px solid var(--color-border);
+      border-radius: var(--radius-md);
+      cursor: pointer;
+      transition: all 0.3s;
+      background: var(--color-background-alt);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .theme-item:hover {
+      border-color: var(--color-primary);
+      transform: translateY(-2px);
+      box-shadow: var(--shadow-md);
+    }
+
+    .theme-item.active {
+      border-color: var(--color-primary);
+      background: var(--color-hover);
+      box-shadow: var(--shadow-md);
+    }
+
+    .theme-item.active::before {
+      content: '✓';
+      position: absolute;
+      top: var(--spacing-xs);
+      right: var(--spacing-xs);
+      width: 24px;
+      height: 24px;
+      background: var(--color-primary);
+      color: var(--color-text-on-primary);
+      border-radius: var(--radius-full);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: var(--font-size-small);
+      font-weight: var(--font-weight-bold);
+    }
+
+    .theme-item-preview {
+      width: 100%;
+      height: 60px;
+      border-radius: var(--radius-sm);
+      margin-bottom: var(--spacing-sm);
+      border: 1px solid var(--color-border);
+      background-size: cover;
+      background-position: center;
+    }
+
+    .theme-item-name {
+      font-size: var(--font-size-base);
+      font-weight: var(--font-weight-semibold);
+      color: var(--color-text);
+      margin-bottom: var(--spacing-xs);
+    }
+
+    .theme-item-desc {
+      font-size: var(--font-size-small);
+      color: var(--color-text-secondary);
+      line-height: 1.4;
+    }
+
     /* 快捷入口 */
     .quick-access {
       margin-top: 60px;
@@ -341,6 +515,7 @@
 <body>
   <div class="container">
     <div class="header">
+      <button id="themeToggleBtn" class="theme-toggle-btn" title="切换主题">🎨</button>
       <h1></h1>
       <p></p>
     </div>
